fix: add overflow hidden to container

--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -21,6 +21,11 @@ a {
   max-width: 1200px;
   width: 100%;
   margin: 0 auto;
+  overflow: hidden;
+
+  @media (max-width: 767px) {
+    padding: 0 8px;
+  }
 }
 .section {
   z-index: 2;
